--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2008579364-34DdLg5b'
             }).then(() => {
                 console.log('LIFF初期化成功');
                 initDatePickers();
@@ -701,5 +701,6 @@
         }
     </script>
 </body>
+
 
 </html>
